# Copyright (c) 2013-2019 Huawei Technologies Co., Ltd. All rights reserved.
# Copyright (c) 2020-2021 Huawei Device Co., Ltd. All rights reserved.
#
# Redistribution and use in source and binary forms, with or without modification,
# are permitted provided that the following conditions are met:
#
# 1. Redistributions of source code must retain the above copyright notice, this list of
#    conditions and the following disclaimer.
#
# 2. Redistributions in binary form must reproduce the above copyright notice, this list
#    of conditions and the following disclaimer in the documentation and/or other materials
#    provided with the distribution.
#
# 3. Neither the name of the copyright holder nor the names of its contributors may be used
#    to endorse or promote products derived from this software without specific prior written
#    permission.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
# "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
# THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
# PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR
# CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
# EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
# PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS;
# OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
# WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
# OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
# ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

import("//kernel/liteos_m/liteos.gni")

module_switch = defined(LOSCFG_POSIX_API)
module_name = get_path_info(rebase_path("."), "name")
kernel_module(module_name) {
  sources = [
    "src/errno.c",
    "src/libc.c",
    "src/map_error.c",
  ]
  configs += [ "$LITEOSTOPDIR:warn_config" ]

  if (defined(LOSCFG_POSIX_THREAD_API)) {
    sources += [
      "src/pthread.c",
      "src/pthread_attr.c",
      "src/pthread_cond.c",
      "src/pthread_mutex.c",
    ]
  }

  if (defined(LOSCFG_POSIX_CLOCK_API)) {
    sources += [ "src/time.c" ]
  }

  if (defined(LOSCFG_POSIX_SEM_API)) {
    sources += [ "src/semaphore.c" ]
  }

  if (defined(LOSCFG_POSIX_MQUEUE_API)) {
    sources += [ "src/mqueue.c" ]
  }

  if (defined(LOSCFG_POSIX_PIPE_API)) {
    sources += [ "src/pipe.c" ]
    sources += [ "src/poll.c" ]
  }

  if (defined(LOSCFG_POSIX_SIGNAL_API)) {
    sources += [ "src/signal.c" ]
  }
}

config("public") {
  include_dirs = [ "include" ]
}
