# Copyright (c) 2022-2022 Huawei Device Co., Ltd. All rights reserved.
#
# Redistribution and use in source and binary forms, with or without modification,
# are permitted provided that the following conditions are met:
#
# 1. Redistributions of source code must retain the above copyright notice, this list of
#    conditions and the following disclaimer.
#
# 2. Redistributions in binary form must reproduce the above copyright notice, this list
#    of conditions and the following disclaimer in the documentation and/or other materials
#    provided with the distribution.
#
# 3. Neither the name of the copyright holder nor the names of its contributors may be used
#    to endorse or promote products derived from this software without specific prior written
#    permission.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
# "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
# THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
# PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR
# CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
# EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
# PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS;
# OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
# WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
# OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
# ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

static_library("test_posix") {
  sources = [
    "mutex/It_posix_mutex.c",
    "mutex/It_posix_mutex_001.c",
    "mutex/It_posix_mutex_002.c",
    "mutex/It_posix_mutex_003.c",
    "mutex/It_posix_mutex_004.c",
    "mutex/It_posix_mutex_005.c",
    "mutex/It_posix_mutex_006.c",
    "mutex/It_posix_mutex_007.c",
    "mutex/It_posix_mutex_008.c",
    "mutex/It_posix_mutex_009.c",
    "mutex/It_posix_mutex_010.c",
    "mutex/It_posix_mutex_011.c",
    "mutex/It_posix_mutex_012.c",
    "mutex/It_posix_mutex_013.c",
    "mutex/It_posix_mutex_014.c",
    "mutex/It_posix_mutex_015.c",
    "mutex/It_posix_mutex_016.c",
    "mutex/It_posix_mutex_017.c",
    "mutex/It_posix_mutex_018.c",
    "mutex/It_posix_mutex_019.c",
    "mutex/It_posix_mutex_020.c",
    "mutex/It_posix_mutex_021.c",
    "mutex/It_posix_mutex_022.c",
    "mutex/It_posix_mutex_023.c",
    "mutex/It_posix_mutex_024.c",
    "mutex/It_posix_mutex_025.c",
    "mutex/It_posix_mutex_026.c",
    "mutex/It_posix_mutex_027.c",
    "mutex/It_posix_mutex_028.c",
    "mutex/It_posix_mutex_029.c",
    "mutex/It_posix_mutex_030.c",
    "mutex/It_posix_mutex_031.c",
    "mutex/It_posix_mutex_032.c",
    "mutex/It_posix_mutex_033.c",
    "mutex/It_posix_mutex_034.c",
    "mutex/It_posix_mutex_035.c",
    "mutex/It_posix_mutex_036.c",
    "pthread/It_posix_pthread.c",
    "pthread/It_posix_pthread_001.c",
    "pthread/It_posix_pthread_002.c",
    "pthread/It_posix_pthread_003.c",
    "pthread/It_posix_pthread_004.c",
    "pthread/It_posix_pthread_005.c",
    "pthread/It_posix_pthread_006.c",
    "pthread/It_posix_pthread_007.c",
    "pthread/It_posix_pthread_008.c",
    "pthread/It_posix_pthread_009.c",
    "pthread/It_posix_pthread_010.c",
    "pthread/It_posix_pthread_011.c",
    "pthread/It_posix_pthread_012.c",
    "pthread/It_posix_pthread_013.c",
    "pthread/It_posix_pthread_014.c",
    "pthread/It_posix_pthread_015.c",
    "pthread/It_posix_pthread_016.c",
    "pthread/It_posix_pthread_017.c",
    "pthread/It_posix_pthread_018.c",
    "pthread/It_posix_pthread_019.c",
    "pthread/It_posix_pthread_020.c",
    "pthread/It_posix_pthread_021.c",
    "pthread/It_posix_pthread_022.c",
    "pthread/It_posix_pthread_023.c",
    "pthread/It_posix_pthread_024.c",
    "pthread/It_posix_pthread_025.c",
    "pthread_func_test.c",
  ]

  configs += [ "//kernel/liteos_m/testsuites:include" ]
}
