# Copyright (c) 2022-2022 Huawei Device Co., Ltd. All rights reserved.
#
# Redistribution and use in source and binary forms, with or without modification,
# are permitted provided that the following conditions are met:
#
# 1. Redistributions of source code must retain the above copyright notice, this list of
#    conditions and the following disclaimer.
#
# 2. Redistributions in binary form must reproduce the above copyright notice, this list
#    of conditions and the following disclaimer in the documentation and/or other materials
#    provided with the distribution.
#
# 3. Neither the name of the copyright holder nor the names of its contributors may be used
#    to endorse or promote products derived from this software without specific prior written
#    permission.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
# "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
# THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
# PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR
# CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
# EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
# PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS;
# OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
# WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
# OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
# ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

static_library("test_posix") {
  sources = [
    "mqueue/It_posix_queue.c",
    "mqueue/It_posix_queue_001.c",
    "mqueue/It_posix_queue_002.c",
    "mqueue/It_posix_queue_003.c",
    "mqueue/It_posix_queue_004.c",
    "mqueue/It_posix_queue_005.c",
    "mqueue/It_posix_queue_006.c",
    "mqueue/It_posix_queue_007.c",
    "mqueue/It_posix_queue_008.c",
    "mqueue/It_posix_queue_009.c",
    "mqueue/It_posix_queue_010.c",
    "mqueue/It_posix_queue_011.c",
    "mqueue/It_posix_queue_012.c",
    "mqueue/It_posix_queue_013.c",
    "mqueue/It_posix_queue_014.c",
    "mqueue/It_posix_queue_015.c",
    "mqueue/It_posix_queue_016.c",
    "mqueue/It_posix_queue_017.c",
    "mqueue/It_posix_queue_018.c",
    "mqueue/It_posix_queue_019.c",
    "mqueue/It_posix_queue_020.c",
    "mqueue/It_posix_queue_021.c",
    "mqueue/It_posix_queue_022.c",
    "mqueue/It_posix_queue_023.c",
    "mqueue/It_posix_queue_024.c",
    "mqueue/It_posix_queue_025.c",
    "mqueue/It_posix_queue_026.c",
    "mqueue/It_posix_queue_027.c",
    "mqueue/It_posix_queue_028.c",
    "mqueue/It_posix_queue_029.c",
    "mqueue/It_posix_queue_030.c",
    "mqueue/It_posix_queue_031.c",
    "mqueue/It_posix_queue_032.c",
    "mqueue/It_posix_queue_033.c",
    "mqueue/It_posix_queue_034.c",
    "mqueue/It_posix_queue_035.c",
    "mqueue/It_posix_queue_036.c",
    "mqueue/It_posix_queue_037.c",
    "mqueue/It_posix_queue_038.c",
    "mqueue/It_posix_queue_039.c",
    "mqueue/It_posix_queue_040.c",
    "mqueue/It_posix_queue_041.c",
    "mqueue/It_posix_queue_042.c",
    "mqueue/It_posix_queue_043.c",
    "mqueue/It_posix_queue_044.c",
    "mqueue/It_posix_queue_045.c",
    "mqueue/It_posix_queue_046.c",
    "mqueue/It_posix_queue_047.c",
    "mqueue/It_posix_queue_048.c",
    "mqueue/It_posix_queue_049.c",
    "mqueue/It_posix_queue_050.c",
    "mqueue/It_posix_queue_051.c",
    "mqueue/It_posix_queue_052.c",
    "mutex/It_posix_mutex.c",
    "mutex/It_posix_mutex_001.c",
    "mutex/It_posix_mutex_002.c",
    "mutex/It_posix_mutex_003.c",
    "mutex/It_posix_mutex_004.c",
    "mutex/It_posix_mutex_005.c",
    "mutex/It_posix_mutex_006.c",
    "mutex/It_posix_mutex_007.c",
    "mutex/It_posix_mutex_008.c",
    "mutex/It_posix_mutex_009.c",
    "mutex/It_posix_mutex_010.c",
    "mutex/It_posix_mutex_011.c",
    "mutex/It_posix_mutex_012.c",
    "mutex/It_posix_mutex_013.c",
    "mutex/It_posix_mutex_014.c",
    "mutex/It_posix_mutex_015.c",
    "mutex/It_posix_mutex_016.c",
    "mutex/It_posix_mutex_017.c",
    "mutex/It_posix_mutex_018.c",
    "mutex/It_posix_mutex_019.c",
    "mutex/It_posix_mutex_020.c",
    "mutex/It_posix_mutex_021.c",
    "mutex/It_posix_mutex_022.c",
    "mutex/It_posix_mutex_023.c",
    "mutex/It_posix_mutex_024.c",
    "mutex/It_posix_mutex_025.c",
    "mutex/It_posix_mutex_026.c",
    "mutex/It_posix_mutex_027.c",
    "mutex/It_posix_mutex_028.c",
    "mutex/It_posix_mutex_029.c",
    "mutex/It_posix_mutex_030.c",
    "mutex/It_posix_mutex_031.c",
    "mutex/It_posix_mutex_032.c",
    "mutex/It_posix_mutex_033.c",
    "mutex/It_posix_mutex_034.c",
    "mutex/It_posix_mutex_035.c",
    "mutex/It_posix_mutex_036.c",
    "mutex/It_posix_mutex_037.c",
    "mutex/It_posix_mutex_038.c",
    "mutex/It_posix_mutex_039.c",
    "mutex/It_posix_mutex_040.c",
    "mutex/It_posix_mutex_041.c",
    "mutex/It_posix_mutex_042.c",
    "mutex/It_posix_mutex_043.c",
    "mutex/It_posix_mutex_044.c",
    "mutex/It_posix_mutex_045.c",
    "mutex/It_posix_mutex_046.c",
    "mutex/It_posix_mutex_047.c",
    "mutex/It_posix_mutex_048.c",
    "mutex/It_posix_mutex_049.c",
    "pthread/It_posix_pthread.c",
    "pthread/It_posix_pthread_001.c",
    "pthread/It_posix_pthread_002.c",
    "pthread/It_posix_pthread_003.c",
    "pthread/It_posix_pthread_004.c",
    "pthread/It_posix_pthread_005.c",
    "pthread/It_posix_pthread_006.c",
    "pthread/It_posix_pthread_007.c",
    "pthread/It_posix_pthread_008.c",
    "pthread/It_posix_pthread_009.c",
    "pthread/It_posix_pthread_010.c",
    "pthread/It_posix_pthread_011.c",
    "pthread/It_posix_pthread_012.c",
    "pthread/It_posix_pthread_013.c",
    "pthread/It_posix_pthread_014.c",
    "pthread/It_posix_pthread_015.c",
    "pthread/It_posix_pthread_016.c",
    "pthread/It_posix_pthread_017.c",
    "pthread/It_posix_pthread_018.c",
    "pthread/It_posix_pthread_019.c",
    "pthread/It_posix_pthread_020.c",
    "pthread/It_posix_pthread_021.c",
    "pthread/It_posix_pthread_022.c",
    "pthread/It_posix_pthread_023.c",
    "pthread/It_posix_pthread_024.c",
    "pthread/It_posix_pthread_025.c",
    "pthread_func_test.c",
  ]

  configs += [ "//kernel/liteos_m/testsuites:include" ]
}
