# Copyright (c) 2013-2019 Huawei Technologies Co., Ltd. All rights reserved.
# Copyright (c) 2020-2021 Huawei Device Co., Ltd. All rights reserved.
#
# Redistribution and use in source and binary forms, with or without modification,
# are permitted provided that the following conditions are met:
#
# 1. Redistributions of source code must retain the above copyright notice, this list of
#    conditions and the following disclaimer.
#
# 2. Redistributions in binary form must reproduce the above copyright notice, this list
#    of conditions and the following disclaimer in the documentation and/or other materials
#    provided with the distribution.
#
# 3. Neither the name of the copyright holder nor the names of its contributors may be used
#    to endorse or promote products derived from this software without specific prior written
#    permission.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
# "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
# THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
# PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR
# CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
# EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
# PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS;
# OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
# WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
# OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
# ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

static_library("test_lms") {
  sources = [
    "It_los_lms.c",
    "It_los_lms_001.c",
    "It_los_lms_002.c",
    "It_los_lms_003.c",
    "It_los_lms_004.c",
    "It_los_lms_005.c",
    "It_los_lms_006.c",
    "It_los_lms_007.c",
    "It_los_lms_008.c",
    "It_los_lms_009.c",
    "It_los_lms_010.c",
    "It_los_lms_011.c",
    "It_los_lms_012.c",
    "It_los_lms_013.c",
    "It_los_lms_014.c",
    "It_los_lms_015.c",
    "It_los_lms_016.c",
    "It_los_lms_017.c",
    "It_los_lms_018.c",
    "It_los_lms_019.c",
    "It_los_lms_020.c",
    "It_los_lms_021.c",
    "It_los_lms_022.c",
    "It_los_lms_023.c",
    "It_los_lms_024.c",
  ]

  if ("$ohos_build_compiler_specified" == "gcc") {
    cflags_c = [
      "-O0",
      "-fsanitize=kernel-address",
    ]
  } else {
    cflags_c = [
      "-O0",
      "-fsanitize=kernel-address",
      "-mllvm",
      "-asan-instrumentation-with-call-threshold=0",
      "-mllvm",
      "-asan-stack=0",
      "-mllvm",
      "-asan-globals=0",
    ]
  }

  configs += [ "//kernel/liteos_m/testsuites:include" ]
}
